# pr-title-generator

./: .cursorrules  Cargo.toml  README.md  generate-pr-title-ml.py  install.sh  main.py  requirements.txt  setup.py
src/: cli.rs  context.rs  error.rs  git.rs  lib.rs  main.rs  ml.rs
