[package]
name = "pr-title-generator"
version = "1.0.0"
edition = "2021"
authors = ["AI Assistant <ai@example.com>"]
description = "A machine learning-based PR title generator that creates meaningful and specific pull request titles based on commit messages and branch context"
readme = "README.md"
repository = "https://github.com/alessandropac96/pr-title-generator"
license = "MIT"

[[bin]]
name = "generate-pr-title"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# Git operations
git2 = "0.18"

# Text processing and regex
regex = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime for future ML model integration
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.8"